# Assignment-03

./: .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
Airflow/: docker-compose.yml
Airflow/airflow/dags/: nexrad_main.py  noaa.py  postgres_db_script.py
Airflow/db_data/base/13445/: 1247  (+11 more)
Airflow/db_data/global/: 1262  2671
Airflow/db_data/pg_stat/: global.stat
Airflow/db_data/pg_stat_tmp/: global.stat
Airflow/db_data/pg_xact/: 0000
Arch_Diag/: fig.py
CLI/: main.py
CLI-v2/: main.py
CLI-v2/data/: config
airflow/: docker-compose.yaml
airflow/plugins/: init.sql
backend/: main.py  requirements.txt
backend/awscloud/cloudwatch/: logger.py
backend/awscloud/s3/: main.py  nexrad_main.py  sql_aws_metadata.py
backend/awscloud/ses/: main.py
backend/config/: db.py
backend/data/: ddl.sql
backend/middleware/: oauth2.py  requests_logs.py
backend/models/: index.py  requests_logs.py  service_plan.py  user.py
backend/repository/: requests_logs.py  service_plans.py  user.py
backend/routers/: admin.py  goes.py  nexrad.py  profile.py  service_plans.py  user.py
backend/schemas/: dashboard.py  goes.py  index.py  schemas.py  user.py
backend/utils/: JWT_token.py  redis.py
cli/: README.md  pyproject.toml
cli/cli/: main.py
data_as_service/db_data/: postmaster.pid
frontend/: Login.py  main.py  register.py  registration.py  requirements.txt  user_data.csv
frontend/env/: pyvenv.cfg
frontend/pages/: 0_Register.py  1_GOES.py  2_nexrad_map.py  3_NEXRAD.py  4_Analytics.py  4_Forgot_password.py  5_Forgot_password.py  check.py
(+56 files in other folders)
