[tool.poetry]
name = "damg-team-5"
version = "0.1.0"
description = ""
authors = ["Hey.Its_RJ <rishab1300@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
damg-team-5 = "cli.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = {extras = ["all"], version = "^0.7.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
